# moneycop

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
moneycop/: account.py  app.py  db.py  storage.py
moneycop/sql_alchemy/: orm.py  sample.py
tests/: test_account.py  test_app.py  test_moneycop.py  test_storage.py
